# desktop

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  publish.yaml
src/: App.tsx  main.css  main.tsx  supabaseClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/copify/: constants.rs  copify.rs  mod.rs  models.rs  xml.rs
src-tauri/src/mover/: mod.rs  models.rs  mover.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/utils/: constants.rs  events.rs  file_utils.rs  mod.rs  models.rs  xml_utils.rs
src/app/: app-page.tsx  auth.tsx  copify.tsx
src/app/auth/: page.tsx
src/app/copify/: page.tsx
src/app/dashboard/: page.tsx
src/app/mover/: page.tsx
src/components/: app-sidebar.tsx  context-menu.tsx  copify-form.tsx  error-alert.tsx  form-checker.tsx  login.tsx  nav-projects.tsx  nav-user.tsx  progress-bar.tsx  sidebar.tsx  spinner.tsx  top-bar.tsx
src/components/ui/: multi-select.tsx
src/hooks/: use-auth.tsx  use-mounted-effect.tsx  use-progress.tsx
src/lib/: check-updates.ts  constants.ts
src/types/: profile.ts
src/utils/: file-utils.tsx  if.tsx
supabase/: README.md  config.toml
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 0_init_profile.sql  1_init_auth.sql  2_init_stripe_integration.sql
(+5 files in other folders)
